--- a/boutique_de_jeux/index.html
+++ b/boutique_de_jeux/index.html
@@ -24,7 +24,7 @@
         suscipit ut.
         Pellentesque bibendum id libero at cursus. Donec ac viverra tellus. Proin sed dolor quis justo convallis auctor
         sit amet nec orci.
-        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        Orci varius natoque penatibus et magnis. dis parturient montes, nascetur ridiculus mus.</p>
 
 </body>
 
