--- a/boutique_de_jeux/index.html
+++ b/boutique_de_jeux/index.html
@@ -20,7 +20,7 @@
         ac ornare ligula. Vestibulum efficitur mattis urna vitae ultrices. Nunc condimentum blandit tellus ut mattis.
         Morbi eget gravida leo. Mauris ornare lorem a mattis ultricies. Nullam convallis tincidunt nunc, eget rhoncus
         nulla tincidunt
-        sed. Nulla consequat tellus lectus, in porta nulla facilisis eu. Donec bibendum nisi felis, sit amet cursus nisl
+        sed. Nulla consequat tellus lectus, in porta nulla facilisis eu. Donec bibendum nisi felis. sit amet cursus nisl
         suscipit ut.
         Pellentesque bibendum id libero at cursus. Donec ac viverra tellus. Proin sed dolor quis justo convallis auctor
         sit amet nec orci.
