--- a/page_magasin/index.html
+++ b/page_magasin/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-            <img src="logo.png" alt="logo sit web">
+        <img src="imag/imag.webp" alt="logo sit web">
         <nav>
             <ul class="mune">
                 <li><a href="#"> Videos to rent</a></li>
@@ -21,24 +21,65 @@
             </ul>
         </nav>
     </header>
-    <dev class="mune2">
+    <section>
+
         <ol>
-            <li><a href="#">Home </a></li>
-            <span>/</span>
-            <li><a href="#">Used DVDs</a></li>
-            <span>/</span>
-            <li><a href="#">Less than £10</a></li>
+            <li>
+                <h3 id="h3"><a href="#">Home </a> / </h3>
+            </li>
+
+            <li>
+                <h3><a href="#">Used DVDs</a> / </h3>
+            </li>
+
+            <li>
+                <h3> <a href="#">Less than £10</a></h3>
+            </li>
         </ol>
-    </dev>
-    <dev>
+
+    </section>
+    <section>
+
         <h1>Videos less than £10</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing Reiciendis placeat laboriosam harum voluptates ducimu!
             <br>
-            Loremipsum cing elit. Earum in quam, sequi consectetur iste quasi, dol. Magni consectetur necessitatibus
+            Loremipsum cing elit. Earum in quam, sequi ectetur necessitatibus
             obcaecati corrupti!
         </p>
-    </dev>
-    <section></section>
+
+    </section>
+    <section>
+
+        <div class="article">
+            <img src="imag/imag1.jpg" alt="article de video" class="imag1" />
+            <h2> video title 1</h2>
+            <h4 class="h4"> RRP:£18.99</h4>
+            <h4> price you pay <a href="#"> £9.99</a></h4>
+            <h4 class="ver"> your saving £9</h4>
+        </div>
+        <div class="article">
+            <img src="imag/imag1.jpg" alt="article de video" class="imag1" />
+            <h2> video title 1</h2>
+            <h4 class="h4"> RRP:£18.99</h4>
+            <h4> price you pay <a href="#"> £9.99</a></h4>
+            <h4 class="ver"> your saving £9</h4>
+        </div>
+        <div class="article">
+            <img src="imag/imag1.jpg" alt="article de video" class="imag1" />
+            <h2> video title 1</h2>
+            <h4 class="h4"> RRP:£18.99</h4>
+            <h4> price you pay <a href="#"> £9.99</a></h4>
+            <h4 class="ver"> your saving £9</h4>
+        </div>
+        <div class="article">
+            <img src="imag/imag1.jpg" alt="article de video" class="imag1" />
+            <h2> video title 1</h2>
+            <h4 class="h4"> RRP:£18.99</h4>
+            <h4> price you pay <a href="#"> £9.99</a></h4>
+            <h4 class="ver"> your saving £9</h4>
+        </div>
+
+    </section>
     <footer>
     </footer>
 </body>
