--- a/page_magasin/index.html
+++ b/page_magasin/index.html
@@ -39,14 +39,14 @@
 
     </section>
     <section>
-
+      <div class="para">
         <h1>Videos less than £10</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing Reiciendis placeat laboriosam harum voluptates ducimu!
             <br>
             Loremipsum cing elit. Earum in quam, sequi ectetur necessitatibus
             obcaecati corrupti!
-        </p>
-
+      </p>
+    </div>
     </section>
     <section>
 
