--- a/page_web_adaptable/index.html
+++ b/page_web_adaptable/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,31 @@
     <link href="style.css" rel="stylesheet">
     <title>page web adaptable</title>
 </head>
+
 <body>
     <header>
-        <nav class="imag">
-        <img src="logo.png" alt="logo"  class="logo">
-        </nav>
         <nav>
+            <div class="imag">
+                <img src="logo.png" alt="logo" class="logo">
+            </div>
+
             <ul>
-                <li><a href="#">Videos to rent</a></li>
-                <li><a href="#">Vides to buy</a></li>
-                <li><a href="#">Used DVDs</a></li>
-                <li><a href="#">Offers</a></li>
-            </ul> 
+                <li><a href="#" class="link">Videos to rent</a></li>
+                <li><a href="#" class="link">Vides to buy</a></li>
+                <li><a href="#" class="link">Used DVDs</a></li>
+                <li><a href="#" class="link">Offers</a></li>
+            </ul>
         </nav>
-        <nav>
+        <div class="mune2">
             <ol>
-                <li><a href="#">Home</a>></li>
-                <li><a href="#">Used DVDs</a>></li>
-                <li><a href="#">Less than £10</a></li>
+                <li><a href="#" class="link">Home</a>></li>
+                <li><a href="#" class="link">Used DVDs</a>></li>
+                <li><a href="#" class="link">Less than £10</a></li>
             </ol>
-        </nav>
+        </div>
         <section>
             <h1>Videos less than £10</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Et odio consequuntur voluptate beatae ut assumenda modi? Dolore ullam
                 iure animi necessi illo.</p>
         </section>
@@ -38,33 +41,34 @@
                 <img src="imag1.jpg" alt="image">
                 <h2>Video title 1</h2>
                 <h4 class="h1">RRP.£18.99</h4>
-                <h4>Price you pay <a>£9.99</a> </h4>
+                <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag2.png" alt="image">
                 <h2>Video title 1</h2>
                 <h4 class="h1">RRP.£18.99</h4>
-                <h4>Price you pay <a>£9.99</a> </h4>
+                <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag3.jpg" alt="image">
                 <h2>Video title 1</h2>
                 <h4 class="h1">RRP.£18.99</h4>
-                <h4>Price you pay <a>£9.99</a> </h4>
+                <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag4.png" alt="image">
                 <h2>Video title 1</h2>
                 <h4 class="h1">RRP.£18.99</h4>
-                <h4>Price you pay <a>£9.99</a> </h4>
+                <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
         </article>
-        
+
     </header>
-    
+
 </body>
+
 </html>
