--- a/page_web_adaptable/index.html
+++ b/page_web_adaptable/index.html
@@ -40,28 +40,28 @@
             <section>
                 <img src="imag1.jpg" alt="image">
                 <h2>Video title 1</h2>
-                <h4 class="h1">RRP.£18.99</h4>
+                <h4 class="h1">RRP: £18.99</h4>
                 <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag2.png" alt="image">
                 <h2>Video title 1</h2>
-                <h4 class="h1">RRP.£18.99</h4>
+                <h4 class="h1">RRP: £18.99</h4>
                 <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag3.jpg" alt="image">
                 <h2>Video title 1</h2>
-                <h4 class="h1">RRP.£18.99</h4>
+                <h4 class="h1">RRP: £18.99</h4>
                 <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
             <section>
                 <img src="imag4.png" alt="image">
                 <h2>Video title 1</h2>
-                <h4 class="h1">RRP.£18.99</h4>
+                <h4 class="h1">RRP: £18.99</h4>
                 <h4>Price you pay <a href="#" class="link">£9.99</a> </h4>
                 <h4 class="h2">your saving £9</h4>
             </section>
